chore: upgrade to Spark 3, Spring 6